--- a/src/hojas-de-estilo/Boton.css
+++ b/src/hojas-de-estilo/Boton.css
@@ -12,7 +12,7 @@
   border: 2px solid white;
   margin: 4px;
   cursor: pointer;
-  user-select: none;
+/*   user-select: none; */
 }
 
 .boton-contenedor:hover {
