--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   font-family: Lato, sans-serif;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
 }
 
@@ -29,6 +29,8 @@
   background-color: #99c9ff;
   border-radius: 20px;
   border: 5px solid white;
+  margin-left: 60px;
+  margin-top: 50px;
 }
 
 .fila {
@@ -36,4 +38,31 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.resultados-chatgpt {
+  width: 400px;
+  height: 600px;
+  margin-left: 80px;
+  background-color: #fff4d3;
+  border-radius: 20px;
+  padding: 25px;
+  margin-left: 60px;
+  margin-top: 50px;
+}
+
+.boton-pasos {
+  width: 140px;
+  height: 80px;
+  font-size: 1.6em;
+  display: flex;
+  background-color: #009688;
+  margin-top: 8px;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  color: white;
+  border: 2px solid white;
+  border-radius: 45px;
+  cursor: pointer;
 }
